[gd_scene load_steps=4 format=3 uid="uid://la1ba80sqtjr"]

[ext_resource type="PackedScene" uid="uid://dy720qdxboj5d" path="res://scenes/ui/MoneyInfo.tscn" id="1_juere"]
[ext_resource type="PackedScene" uid="uid://deo0ya23a7mu7" path="res://scenes/ui/postWave/PlayerStatsPanel.tscn" id="1_m4ymq"]
[ext_resource type="Script" uid="uid://4iyq3xudlku7" path="res://scripts/ui/postWave/shop.gd" id="1_npqmm"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_npqmm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopInfo" type="HBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/ShopInfo"]
layout_mode = 2
text = "商店(第x波)"

[node name="MoneyInfo" parent="HBoxContainer/LeftPanel/ShopInfo" instance=ExtResource("1_juere")]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/LeftPanel/ShopInfo"]
layout_mode = 2
text = "刷新"

[node name="ShopItemContainer" type="HBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="PlayerHoding" type="HBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="Item" type="VBoxContainer" parent="HBoxContainer/LeftPanel/PlayerHoding"]
layout_mode = 2

[node name="ItemLabel" type="Label" parent="HBoxContainer/LeftPanel/PlayerHoding/Item"]
layout_mode = 2
text = "道具"

[node name="VScrollBar" type="VScrollBar" parent="HBoxContainer/LeftPanel/PlayerHoding/Item"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/LeftPanel/PlayerHoding/Item/VScrollBar"]
layout_mode = 2
offset_top = 12.0
offset_right = 32.0
offset_bottom = 12.0

[node name="Weapon" type="VBoxContainer" parent="HBoxContainer/LeftPanel/PlayerHoding"]
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="HBoxContainer/LeftPanel/PlayerHoding/Weapon"]
layout_mode = 2
text = "武器"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/LeftPanel/PlayerHoding/Weapon"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerStatsPanel" parent="HBoxContainer/RightPanel" instance=ExtResource("1_m4ymq")]
layout_mode = 2
size_flags_vertical = 3

[node name="HardWaveInfo" type="VBoxContainer" parent="HBoxContainer/RightPanel"]
layout_mode = 2

[node name="HardWaveInfo" type="Label" parent="HBoxContainer/RightPanel/HardWaveInfo"]
layout_mode = 2
text = "xx将会出现在xx"

[node name="HardWaveIcons" type="HBoxContainer" parent="HBoxContainer/RightPanel/HardWaveInfo"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/RightPanel"]
layout_mode = 2
text = "出发
"
